# stanok2opengl32

./: CMakeLists.txt  build.sh
src/: exports.def  gl_proxy.cpp  gl_proxy.h  main.cpp  overlay.cpp  overlay.h
